--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,7 +9,7 @@ jobs:
     # Use the same Docker base as the project
       - image: python:3.7.3-stretch
 
-    working_directory: ~/environment/dockerproj_udacity
+    working_directory: ~/repo
 
     steps:
       - checkout
@@ -18,7 +18,7 @@ jobs:
       - restore_cache:
           keys:
             - v1-dependencies-{{ checksum "requirements.txt" }}
-     #       # fallback to using the latest cache if no exact match is found
+            # fallback to using the latest cache if no exact match is found
             - v1-dependencies-
 
       - run:
@@ -28,7 +28,7 @@ jobs:
             . venv/bin/activate
             make install
             # Install hadolint
-            wget -O /bin/hadolint https://github.com/hadolint/hadolint/releases/download/v1.23.0/hadolint-Linux-x86_64 &&\
+            wget -O /bin/hadolint https://github.com/hadolint/hadolint/releases/download/v1.17.5/hadolint-Linux-x86_64 &&\
                 chmod +x /bin/hadolint
       - save_cache:
           paths:
